--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
 
     </section>
     <section class="section2 ">
+        <div class="img"><img
+                src="images/female/eat-healthy-food-png-transparent-eat-healthy-foodpng-images-woman-eating-png-480_319-removebg-preview.png"
+                alt=""></div>
 
         <div class="one">
 
@@ -44,7 +47,7 @@
                 href="https://psdkits.com/free-lunchcrafters-healthy-food-landing-page/">Contact Me</a>
 
         </div>
-        <div class="img"><img src="images/female/Person Image.png" alt=""></div>
+
     </section>
     <section>
         <div class="center">
@@ -60,15 +63,15 @@
     </section>
     <section class="section3">
         <div class="three">
-            <img src="images/food/Project Cover4.png" alt="">
-            <h1>Recipie Title</h1>
+            <img src="images/food/Project Cover.jpg" alt="">
+            <h1>Dinner</h1>
             <p>It is meant to include the technical aspects of a dish while also teaching the artistic combination of
                 flavor and texture. A recipe communicates the ingredients and procedures the chef uses to make his
                 creations. It is this tool which allows the chef to train and replicate his skill to his staff.</p>
         </div>
-        <div class="three last">
-            <img src="images/food/Project Cover2.png" alt="">
-            <h1>Recipie Title1</h1>
+        <div class="three">
+            <img src="images/food/Project Cover1.jpg" alt="">
+            <h1>Lunch</h1>
             <p> The purpose of a recipe is to have a precise record of the ingredients used, the amounts needed, <br>
                 and the
                 way they are combined.The purpose of a recipe is to have a precise record of the ingredients used,<br>
@@ -77,7 +80,7 @@
         </div>
         <div class="three ">
             <img src="images/food/Project Cover.png" alt="">
-            <h1>Recipie Title2</h1>
+            <h1>Breakfast</h1>
             <p>A recipe communicates the ingredients and procedures the chef uses to make his
                 creations. It is this tool which allows the chef to train and replicate his skill to his staff.</p>
         </div>
